--- a/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/data_entry.html
+++ b/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/data_entry.html
@@ -8,35 +8,48 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
+    <div class="all">
     <p>Please give information on the tweets you would like to analyse</p>
-    <form action="" method="post">
+    <form action="" method="post" class="form">
       {% csrf_token %}
-
-      {{ form.bearerToken.label_tag }}
-      {{ form.bearerToken }}
+      <div id="bearerToken" class="fill">
+        {{ form.bearerToken.label_tag }}
+        {{ form.bearerToken }}
+      </div>
+      
+      <div id="tweetNum" class="fill">
+        {{ form.number_of_tweets.label_tag}}
+        {{ form.number_of_tweets }}
+      </div>
+      
 
         <legend>Select filter type:</legend>
     
-        <div>
+        <div class="radiobutton">
           <input type="radio" id="username" name="selection" value="username" onclick="filterSelection()">
           <label for="username">User</label>
         </div>
     
-        <div>
+        <div class="radiobutton">
           <input type="radio" id="keyword" name="selection" value="keyword" onclick="filterSelection()">
           <label for="keyword">Keyword(s)</label>
         </div>
 
-      <div id="username_div" style="visibility:hidden">
-      {{ form.username.label_tag }}
-      {{ form.username }}</div>
+    <div class="fill">
+      <div id="username_div">
+        {{ form.username.label_tag }}
+        {{ form.username }}
+      </div>
       
-      <div id="keyword_div" style="visibility:hidden">
-      {{ form.keywords.label_tag }}
-      {{ form.keywords }}</div>
+      <div id="keyword_div">
+        {{ form.keywords.label_tag }}
+        {{ form.keywords }}
+      </div>
+    </div>
 
-      <input type="submit" value="Submit">
+      <input class="button" type="submit" value="Submit">
     </form>
+  </div>
   
   </body>
 </html>
