--- a/WebApp/webapp/tweetSentiment/static/style.css
+++ b/WebApp/webapp/tweetSentiment/static/style.css
@@ -1,4 +1,57 @@
 body {
-    background-color: #89CFF0;
+    background-color:#1DA1F2;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:white;   
 }
 
+.main-heading {
+	line-height: 100%;
+	font-weight: 600;
+	font-size: 28px;
+	text-transform: uppercase;
+}
+
+#username {
+    margin:1%;
+}
+#username_div {
+    display: none;
+}
+
+#keyword_div {
+    display: none;
+}
+
+.fill {
+    margin-bottom: 5%;
+}
+
+.button {
+    border-top-color: #1DA1F2;
+    border-left-color: #1DA1F2;
+    border-right-color: #1DA1F2;
+    border-bottom-color: #1DA1F2;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    padding: 5px 5px;
+    text-align: center;
+    display: inline-block;
+    font-size: 17px;
+    border-radius: 4px;
+    background-color: white;
+    text-align: center;
+	cursor: pointer;
+}
+
+.form {
+    width: 70%;
+    margin: 0 auto;
+    background-color: #fcfcfc;
+    padding: 20px 50px 40px;
+    border-radius: 5px;
+    color:black;
+  }
+
+  .radiobutton {
+    margin-bottom: 4%;
+  }
