--- a/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/data_entry.html
+++ b/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/data_entry.html
@@ -10,6 +10,7 @@
   </head>
   
   <body>
+    {{ form.non_field_errors }}
     <div class="all">
     <p>Please give information on the tweets you would like to analyse</p>
 
@@ -27,6 +28,7 @@
       <div id="tweetNum" class="fill">
         {{ form.number_of_tweets.label_tag}}
         {{ form.number_of_tweets }}
+        <p class="error">{{ form.number_of_tweets.errors }}</p>
       </div>
       
 
