add error message

--- a/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/data_entry.html
+++ b/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/data_entry.html
@@ -52,6 +52,7 @@
           {{ form.username.label_tag }}
           {{ form.username }}
         </div>
+        <p class="error" id="error_username">{{ form.username.errors }}</p>
       
       <div id="keyword_div">
         {{ form.keywords.label_tag }}
