--- a/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/response.html
+++ b/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/response.html
@@ -29,6 +29,23 @@
     </tr>
     {% endfor %}
   </table>
-  
+
+  <button class="button" id="neg_button" onclick="filter()">Filter negative tweets</button>
+
+  <table id="table_neg">
+    
+    <!-- add headers to table -->
+    <tr>
+      <th>Tweet</th>
+    </tr>
+
+    <!-- loop through the results and add tweet texts and the sentiment to columns-->
+    {% for tweet in negative_tweets %}
+    <tr>
+        <td>{{ tweet.tweet_text }}</td>
+    </tr>
+    {% endfor %}
+  </table>
+
   </body>
 </html>
