change initial message

--- a/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/data_entry.html
+++ b/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/data_entry.html
@@ -12,7 +12,7 @@
   <body>
     {{ form.non_field_errors }}
     <div class="all">
-    <p>Please give information on the tweets you would like to analyse</p>
+    <p>Please give information on the tweets you would like to classify</p>
 
     <!-- form -->
     <form action="" method="post" class="form">
