--- a/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/response.html
+++ b/WebApp/webapp/tweetSentiment/Templates/tweetSentiment/response.html
@@ -11,7 +11,12 @@
   
   <body>
     {% csrf_token %}
-    <p>Response</p>
+    <p>Scale used in the classification of the tweets:</p>
+    <p>1: Very Negative</p>
+    <p>2: Negative</p>
+    <p>3: Neutral</p>
+    <p>4: Positive</p>
+    <p>5: Very Positive</p>
     
     <!-- create table for results -->
     <table id="table">
@@ -31,7 +36,7 @@
     {% endfor %}
   </table>
 
-  <button class="button" id="neg_button" onclick="filter()">Filter negative tweets</button>
+  <button class="button" id="neg_button" onclick="filter()">Retrieve negative tweets</button>
 
   <table id="table_neg">
     
@@ -48,7 +53,7 @@
     {% endfor %}
   </table>
 
-  <button class="button" id="neg_button_personal" onclick="filterPersonal()">Filter negative personal tweets</button>
+  <button class="button" id="neg_button_personal" onclick="filterPersonal()">Retrieve negative personal tweets</button>
 <br>
   <table id="table_neg_personal">
     
